# spot-cli

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  config.h  configure.ac  main.c
include/: dbus-print-message.h  main.h  tool-common.h
snap/: snapcraft.yaml
src/: dbus-print-message.c  dbus-send  main.c  spotcli.c  test.c  tool-common.c
